--- a/MDK-ARM/cyrbt_v3/cyrbt_v3.build_log.htm
+++ b/MDK-ARM/cyrbt_v3/cyrbt_v3.build_log.htm
@@ -27,11 +27,14 @@ Project File Date:  03/13/2019
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'cyrbt_v3'
-compiling cylib_controller.c...
+compiling main.c...
+../Core/Src/main.c(272): warning:  #128-D: loop is not reachable
+    while (1)
+../Core/Src/main.c: 1 warning, 0 errors
 linking...
-Program Size: Code=21354 RO-data=362 RW-data=1204 ZI-data=2140  
+Program Size: Code=25466 RO-data=526 RW-data=1212 ZI-data=2140  
 FromELF: creating hex file...
-"cyrbt_v3\cyrbt_v3.axf" - 0 Error(s), 0 Warning(s).
+"cyrbt_v3\cyrbt_v3.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -54,7 +57,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.1.2
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
