--- a/MDK-ARM/cyrbt_v3/cyrbt_v3.build_log.htm
+++ b/MDK-ARM/cyrbt_v3/cyrbt_v3.build_log.htm
@@ -27,11 +27,20 @@ Project File Date:  04/20/2019
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'cyrbt_v3'
-compiling delta.c...
+compiling cylib_gcoder.c...
+..\cylib\gcoder\cylib_gcoder.c(54): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "const char *"
+      int len = strlen(buffer);
+..\cylib\gcoder\cylib_gcoder.c(77): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "const char *restrict"
+              rescnt = sscanf(cylib_gcoder.buffer,"G00 X%f Y%f Z%f",&point[0],&point[1],&point[2]);
+..\cylib\gcoder\cylib_gcoder.c(98): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "const char *restrict"
+  			rescnt = sscanf(cylib_gcoder.buffer,"G04 P%f",&delay);
+..\cylib\gcoder\cylib_gcoder.c(259): warning:  #1-D: last line of file ends without a newline
+  }
+..\cylib\gcoder\cylib_gcoder.c: 4 warnings, 0 errors
 linking...
-Program Size: Code=30668 RO-data=668 RW-data=1228 ZI-data=2316  
+Program Size: Code=33696 RO-data=764 RW-data=1336 ZI-data=2312  
 FromELF: creating hex file...
-"cyrbt_v3\cyrbt_v3.axf" - 0 Error(s), 0 Warning(s).
+"cyrbt_v3\cyrbt_v3.axf" - 0 Error(s), 4 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -54,7 +63,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.1.2
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
